<?xml version="1.0" encoding="UTF-8"?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
    <name>Billboard</name>
    <description>Create text and image billboards that always face the camera</description>
    <version>0.1.0</version>
    <maintainer email="">Roman</maintainer>
    <license file="LICENSE">LGPL-3.0</license>
    <url type="repository">https://github.com/roman/freecad_billboard</url>

    <content>
        <workbench>
            <classname>BillboardWorkbench</classname>
            <subdirectory>./</subdirectory>
            <icon>Resources/icons/Billboard.svg</icon>
        </workbench>
    </content>

    <depend>FreeCAD</depend>

    <freecadmin>1.0</freecadmin>
</package>
